[fix] fix the compile err